--- a/projects/_posts/2014-01-01-colorado.md
+++ b/projects/_posts/2014-01-01-colorado.md
@@ -5,6 +5,6 @@ date:   2014-01-01 18:59:58
 categories: hiking
 ---
 
-The summer of 2012, I embarked on an REU based in Golden, CO. There I climbed Mt. Bierstadt and a few other 14ers. 
+The summer of 2012, I embarked on an REU based in Golden, CO. There I climbed Mt. Bierstadt, Grizzly's Peak, Torrey's Peak and a few other 14ers. 
 
 Pictures Coming Soon!
