--- a/_posts/2014-07-13-project-6.markdown
+++ b/_posts/2014-07-13-project-6.markdown
@@ -1,13 +1,13 @@
 ---
 layout: default
-modal-id: 6
-title: Lifting App To Be Named
+modal-id: 7
+title: ML Consulting Landing Page
 date: 2014-07-15
-img: lift.jpg
+img: ML.png
 alt: image-alt
-project-date: January 2015
-client: RCOS
-category: IOS Development
-description: I am currently working on a modern weight-training application. It has one purpose; to maximize your gains. The UI and UX will streamline specific muscle targeted workouts. Coming soon...
+project-date: May 2015
+client: freelance
+category: Rails
+description:
 
 ---
